Fix problematic margins and spacing that was happening when embedded in squarespace. Started using more consistent method for conistent styling accross the app. Still not great, but better.

--- a/src/globals.css
+++ b/src/globals.css
@@ -4,6 +4,9 @@
 
 @layer base {
   #root {
+    margin: 0;
+    padding: 0;
+    width: 100%;
     --hb-background: 0 0% 100%;
     --hb-foreground: 0 0% 0%;
     --hb-card: 0 0% 100%;
@@ -91,4 +94,10 @@
       transform: translateX(100%);
     }
   }
+} 
+
+#root {
+  width: 100%;
+  margin: 0 !important;
+  padding: 0 !important;
 } 
